WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
226545
REGRESSION(
r277217
?): ASSERTION FAILED: Unhandled message RemoteLegacyCDMSession_SendError to 10 assertionFailureDueToUnreachableCode
https://bugs.webkit.org/show_bug.cgi?id=226545
Summary
REGRESSION(r277217?): ASSERTION FAILED: Unhandled message RemoteLegacyCDMSess...
Jer Noble
Reported
2021-06-02 11:13:56 PDT
REGRESSION(
r277217
?): ASSERTION FAILED: Unhandled message RemoteLegacyCDMSession_SendError to 10 assertionFailureDueToUnreachableCode
Attachments
Patch
(2.99 KB, patch)
2021-06-02 11:15 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2021-06-02 11:14:18 PDT
<
rdar://78001450
>
Jer Noble
Comment 2
2021-06-02 11:15:52 PDT
Created
attachment 430377
[details]
Patch
EWS
Comment 3
2021-06-02 14:33:55 PDT
Committed
r278373
(
238400@main
): <
https://commits.webkit.org/238400@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 430377
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug