REGRESSION(r277217?): ASSERTION FAILED: Unhandled message RemoteLegacyCDMSession_SendError to 10 assertionFailureDueToUnreachableCode https://bugs.webkit.org/show_bug.cgi?id=226545 <rdar://78001450>

Reviewed by Eric Carlson.

Add message handlers for RemoteLegacyCDMProxy and RemoteLegacyCDMSessionProxy.

* GPUProcess/GPUConnectionToWebProcess.cpp:
(WebKit::GPUConnectionToWebProcess::dispatchMessage):
(WebKit::GPUConnectionToWebProcess::dispatchSyncMessage):


Canonical link: https://commits.webkit.org/238400@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@278373 268f45cc-cd09-0410-ab3c-d52691b4dbfc